# stone-math-cpp

./: CMakeLists.txt  README.md  main.cpp
include/: Evaluator.h  Lexer.h  Parser.h  StoneMath.h  TokenType.h
src/: Evaluator.cpp  Lexer.cpp  Parser.cpp  StoneMath.cpp
tests/: main.cpp
